--- a/results.Rmd
+++ b/results.Rmd
@@ -230,7 +230,9 @@ publisher_df %>%
 
 We also collected information about whether reverse-flipped journals were related to scholarly societies or research institutions. We obtained `r my_df %>% filter(society_affiliation == 1 | other_sci_affiliation == 1) %>% nrow()` (`r my_df %>% filter(society_affiliation == 1 | other_sci_affiliation == 1) %>% nrow() / nrow(my_df) * 100` %) reverse-flip journals that were affiliated with a scholarly society (N = `r my_df %>% filter(society_affiliation == 1) %>% nrow()`) or research institution (N = `r my_df %>% filter(other_sci_affiliation == 1) %>% nrow()`). 
 
-Figure presents the extent to which journals were related to scholarly societies or academic institutions at the time of the reverse-flip. It shows that the majority of reverse-flip journals from major publishers were affiliated with professional associations and other research organisations.
+visualizes the relationships of journals to scholarly societies and research organizations by publishe
+
+Figure visualizes the relationships of journals to scholarly societies and research organizations by publisher showing that the majority of reverse-flip journals from major publishers were not in-house venues, but journals affiliated with scholarly associations and other research organizations.
 
 ```{r}
 my_df %>%
@@ -277,7 +279,7 @@ my_df %>%
             `Q3` = quantile(age_at_time_of_flip, 3/4)) -> age_df
 ```
 
-Table provides summary statistics about the journal age at the year of the reverse flip. Large age differences can be observed, ranging from one year of existences to `r age_df$Maximum` years. Around `r round(filter(my_df, !is.na(year_founded), year_founded < 1990) %>% nrow() / nrow(my_df) * 100)`% (N = `r filter(my_df, !is.na(year_reverse_flipped), year_founded < 1990) %>% nrow()`) of all journals found started before 1990. These findings suggest that not all journals in our sample were born fully open access or online journals, but some might underwent more than one business model change in the course of history.
+Table provides summary statistics about the journal age at the year of the reverse flip, revealing Large age differences that range from 1-`r age_df$Maximum` years of publishing. Around `r round(filter(my_df, !is.na(year_founded), year_founded < 1990) %>% nrow() / nrow(my_df) * 100)`% (N = `r filter(my_df, !is.na(year_reverse_flipped), year_founded < 1990) %>% nrow()`) of all reverse-flip launched before 1990. These findings suggest that not all journals in our sample were born OA or online journals, but, in fact, some venues might have undergone more than one business model change in their publishing history.
 
 ```{r}
 age_df %>%
@@ -285,9 +287,9 @@ age_df %>%
  knitr::kable(digits = 0, caption = "Summary statistics for journal age at time of reverse flip")
 ```
 
-Figure presents the number of journals converted from fully open access to a subscription-based business model per year grouped by journal age when the reverse flip happened.
+Figure presents the annual distribution of journals that converted from fully OA to a subscription-based business model grouped by journal age at the time of the flip
 
-```{r, fig.cap="Number of journals converted from fully open access to a subscription-based business model per year, grouped by journal age at time of reverse flip."}
+```{r, fig.cap="Number of journals that converted from fully OA to a subscription-based business model per year, grouped by journal age at the time of the reverse flip"}
 my_df %>%
   mutate(age_at_time_of_flip = year_reverse_flipped - year_founded) %>%
   mutate(age_at_time_of_flip_cat = ifelse(age_at_time_of_flip < 6, "1-5", NA)) %>%
@@ -357,7 +359,7 @@ We investigated whether journals charged authors a publication fee using journal
 
 #### a) Which access model do the journals operate on?
 
-Table presents the journals' access model after the reverse-flip. Our analysis shows that around `r round(my_df %>% filter(grepl("Hybrid", oa_model, fixed = FALSE, ignore.case = TRUE)) %>% nrow() / nrow(my_df) * 100, 0)` % (N = `r my_df %>% filter(grepl("Hybrid", oa_model, fixed = FALSE, ignore.case = TRUE)) %>% nrow()`) of the journals shifted to a hybrid OA model, while the remaining `r round(my_df %>% filter(grepl("Subscription", oa_model, fixed = TRUE)) %>% nrow() / nrow(my_df) * 100, 0)` % (N = `r my_df %>% filter(grepl("Subscription", oa_model, fixed = TRUE)) %>% nrow()`) transformed to subscription venues. 
+Table presents the journals' access model after the reverse flip. Our analysis shows that around `r round(my_df %>% filter(grepl("Hybrid", oa_model, fixed = FALSE, ignore.case = TRUE)) %>% nrow() / nrow(my_df) * 100, 0)` % (N = `r my_df %>% filter(grepl("Hybrid", oa_model, fixed = FALSE, ignore.case = TRUE)) %>% nrow()`) of the journals shifted to a hybrid OA model, while the remaining `r round(my_df %>% filter(grepl("Subscription", oa_model, fixed = TRUE)) %>% nrow() / nrow(my_df) * 100, 0)` % (N = `r my_df %>% filter(grepl("Subscription", oa_model, fixed = TRUE)) %>% nrow()`) transformed to subscription venues. However, more than half (N=45) of the subscription journals eventually shifted to hybrid OA (e.g., all Taylor and Francis journals, 12 out of 13 Springer Nature journals, and 8 out of 20 Elsevier journals), and only one journal, the Journal of Language Contact: Evolution of Languages, Contact and Discourse published by Brill, flipped to OA again.
 
 
 ```{r}
@@ -367,7 +369,7 @@ my_df %>%
   mutate(prop  = n / sum(n) * 100) %>% 
   arrange(desc(prop)) %>%
   rbind(list("Total", nrow(my_df), 100)) %>%
-  knitr::kable(caption = "Business model of journals after reverse flip", digits = 2, col.names = c("Business model", "Journals", "Proportion"))
+  knitr::kable(caption = "Access model of journals after reverse flip", digits = 2, col.names = c("Access model", "Journals", "Proportion"))
 ```
 
 
@@ -488,9 +490,11 @@ apc_df %>%
   ggplot(aes(apc_type, apc, fill = apc_type)) +
   geom_boxplot() +
   scale_x_discrete(limits = c("Before Flip", "After Flip", "Current APC")) +
-  scale_fill_manual(values = c("#CC6677", "#88CCEE", "#DDCC77")) +
+  scale_fill_manual(values = c("Before Flip" = "#009392", 
+                               "Current APC" = "#cf597e", 
+                               "After Flip" = "#e9e29c")) +
   theme_minimal() +
-  labs(x = "APC Pricing", y = "List Price") +
+  labs(x = "Timeline", y = "List Price", title = "APC Pricing") +
   # remove legend
   guides(fill=FALSE) +
   theme_minimal(base_family="Roboto") +
@@ -502,7 +506,7 @@ apc_df %>%
 ```
 
 
-#### b) What is the uptake of hybrid OA articles; Was open access publication in reverse-flip journals enabled by transformative agreements?
+#### b) What is the uptake of hybrid OA articles; Was OA publishing in reverse-flip journals enabled by transformative agreements?
 
 
 ```{r}
@@ -523,7 +527,7 @@ hybrid %>%
 
 Retrieving open content licenses including start date from Crossref, we were able to obtain `r sum(hybrid_shares$hoa)` articles from `r length(unique(hybrid_shares$journal_title))` that were made available immediately as open access articles in the year or after the reverse flip. They represent `r round(sum(hybrid_shares$hoa) / sum(hybrid_shares$jn_volume) * 100, 2)`% of the total article volume studied.
 
-Using data from the Open APC initiative, we finally checked whether institutions have financed hybrid open access articles in reverse-flipped journals. We found evidence for institutional sponsorship for three individual articles in reverse-flip journals, and as part of a transformative agreement "Springer Compact" offered by Springer Nature to individual institutions and countries. Table summaries the total number of articles in reverse-flip journal that were made openly available under "Springer Compact" agreements, as well as its proportion per transformation contract. Although the proportion these articles is marginally, findings suggest that mechanisms were missing that would have helped institutions to prevent funding of open access publication in reverse-flipped journals.
+Using data from the Open APC initiative, we then checked whether academic institutions had financed hybrid OA articles in reverse-flip journals. We found evidence for institutional sponsorship for three articles in these journals, and as part of the transformative agreement “Springer Compact" between Springer Nature and individual institutions and countries. Table summarizes the total number of articles in reverse-flip journals that were made openly available through “Springer Compact” as well as its proportion per transformation contract. Although the proportion of these articles is marginal, our findings suggest that control mechanisms that help institutions to prevent funding of OA publications in reverse-flipped journals are not in place.
 
 ```{r}
 oapc <- readr::read_csv("https://github.com/subugoe/hybrid_oa_dashboard/blob/master/data/oapc_hybrid.csv?raw=true") %>% 
