--- a/results.Rmd
+++ b/results.Rmd
@@ -496,44 +496,31 @@ tt %>%
 
 #### a) How do APC levels differ before and after the flip?
 
-```{r}
-apcs <- readxl::read_xlsx("data/master_list.xlsx", sheet = 3) %>%
-  filter(lisa_cases == 1) %>%
-  mutate(
-    `Before Flip` = as.numeric(apc_pre),
-    `After Flip` = as.numeric(apc_post),
-    `Current APC` = as.numeric(apc_now),
-     diff = `After Flip` - `Before Flip`) %>% 
-  filter(!is.na(diff)) %>%
-  select(journal_name, diff, `Before Flip`, `After Flip`, `Current APC`) %>%
-  gather(3:5, key = "apc_type", value = "apc") %>%
- # filter(apc > 0) %>% 
-  group_by(journal_name) %>%
-  filter(n() > 2)
-```
+```{r, fig.cap="Scatterplot of APC list prices in USD based on pricing information for the year before the reverse-flip and for journals offering an hybrid open access option at the second half of 2018. Fully OA journals denoted with 0 did not charge an APC."}
 
-We were able to obtain publication fee list prices before and after the flip including the most recent level in 2018 for `r length(unique(apcs$journal_name))` journals. Figure compares them with each other, highlighting an considerable increase after the reverse flip.
-
-
-```{r, fig.cap="APC list prices before and after the flip including most current level among reverse-flip journals. Please not that also "}
-apcs %>% 
-  ggplot(aes(apc_type, apc, fill = apc_type)) +
-  geom_boxplot() +
-  scale_x_discrete(limits = c("Before Flip", "After Flip", "Current APC")) +
-  scale_fill_manual(values = c("Before Flip" = "#009392", 
-                               "Current APC" = "#cf597e", 
-                               "After Flip" = "#e9e29c")) +
-  theme_minimal() +
-  labs(x = "Timeline", y = "List Price", title = "APC Pricing") +
-  # remove legend
-  guides(fill=FALSE) +
+ggplot(society_df, 
+       aes(as.numeric(apc_pre), as.numeric(apc_now))) + 
+  geom_point(aes(color = factor(relation, 
+                                     c("Society", "Institutional", "No relation"))), alpha = 0.7) +
+  coord_equal(ratio=1) +
+  scale_color_manual("Affiliation",
+                    values = c(
+                      "Society" = "#23445D",
+                      "Institutional" = "#AE4132",
+                      "No relation" = "grey60")) +
+  labs(x = "Fully OA APC", y = "Hybrid OA APC") +
+  scale_x_continuous(limits = c(0,4000)) +
   theme_minimal(base_family="Roboto") +
   theme(plot.margin=margin(30,30,30,30)) +
   theme(panel.grid.minor=element_blank()) +
-  theme(axis.ticks=element_blank()) +
-  theme(panel.grid.major.x=element_blank()) +
-  theme(panel.border=element_blank())
+ #theme(axis.ticks=element_blank()) +
+ # theme(panel.grid.major.x=element_blank()) +
+  theme(panel.border=element_blank()) +
+  theme(legend.position = "top",
+        legend.justification = "right")
 ```
+
+We were able to obtain publication fee list prices before and after the flip including the most recent level in 2018. While  `r society_df %>% filter(as.numeric(apc_pre) > 0) %>% nrow()` fully open access journals charged author fees before the reverse-flip, `r society_df %>% filter(as.numeric(apc_now) > 0) %>% nrow()` journals offered paid hybrid open access options at the time of analysis. Figure compares APC list prices in USD with each other, highlighting an considerable increase after the reverse flip. It also shows that many journals affiliated with scholarly societies and research institutions introduced or raised their APCs for open access publishing.
 
 
 #### b) What is the uptake of hybrid OA articles; Was OA publishing in reverse-flip journals enabled by transformative agreements?
