--- a/results.Rmd
+++ b/results.Rmd
@@ -347,6 +347,7 @@ Figure presents a breakdown of discipline by journal age at the time of the reve
 ```{r fig_9, fig.cap='Discipline by journal age at the time of reverse flip, shown as proportion of the total number of reverse flip journals in the dataset. The colored areas represent the distribution of journals per Discipline.'}
 # Motivation: https://serialmentor.com/dataviz/nested-proportions.html
 my_df %>%
+  mutate(Discipline = fct_infreq(Discipline)) %>%
   mutate(age_at_time_of_flip = year_reverse_flipped - year_founded) %>%
   mutate(age_at_time_of_flip_cat = ifelse(age_at_time_of_flip < 6, "1-5", NA)) %>%
   mutate(age_at_time_of_flip_cat = ifelse(age_at_time_of_flip > 5, "6-15", age_at_time_of_flip_cat)) %>%
@@ -473,7 +474,7 @@ To investigate whether the citation impact changed after the access model conver
 The most recent SNIP values were reported for 2017; accordingly, we only included journals that flipped until 2015 (N = `r n_distinct(tt$issn)`).
 Figure illustrates the SNIP distribution of reverse-flip journals two years before and after the conversion. Our analysis highlights that there is only little change in SNIP values before and after the business model change.
 
-```{r, fig.cap='Development of source normalized impact per paper (SNIP) value between two years before and after the reverse flip. Coordinate system limited to SNIP value 2.5'}
+```{r fig_11, fig.cap='Development of source normalized impact per paper (SNIP) value between two years before and after the reverse flip. Coordinate system limited to SNIP value 2.5'}
 tt %>%
   ggplot(aes(lag, SNIP.x, fill = lag)) +
   geom_boxplot() +
@@ -497,7 +498,7 @@ tt %>%
 
 #### a) How do APC levels differ before and after the flip?
 
-```{r, fig.cap="Scatterplot of APC list prices in USD based on pricing information for the year before the reverse-flip and for journals offering an hybrid open access option at the second half of 2018. Fully OA journals denoted with 0 did not charge an APC."}
+```{r fig_12, fig.cap="Scatterplot of APC list prices in USD based on pricing information for the year before the reverse-flip and for journals offering an hybrid open access option at the second half of 2018. Fully OA journals denoted with 0 did not charge an APC."}
 
 ggplot(society_df, 
        aes(as.numeric(apc_pre), as.numeric(apc_now))) + 
@@ -577,7 +578,7 @@ embargo <- readxl::read_xlsx("data/master_list.xlsx", sheet = 4) %>%
 ```
 We were able to find the embargo periods for `r embargo %>% filter(!is.na(embargo)) %>% nrow()`) out of `r nrow(embargo)` reverse-flip journals that currently offer a hybrid OA option. The majority of the journals (N=`r embargo %>% filter(embargo == 12) %>% nrow()`) does not allow authors to share their work openly, for example by depositing a copy of the manuscript in an OA repository, until 12 months after it has been published. However, 14% of the journals (N=16) raise the bar to 24 months, while 12% (N=13) do not impose any embargo periods (Figure).
 
-```{r}
+```{r fig_13}
 embargo %>%
   filter(!is.na(embargo)) %>%
   count(embargo) %>%
